[gd_scene load_steps=3 format=3 uid="uid://c8t5vf7h3bjkx"]

[ext_resource type="Script" path="res://game/ui/menu.gd" id="1_menu"]
[ext_resource type="AudioStream" uid="uid://csraxdgxo1jfb" path="res://assets/sounds/menu_select.wav" id="2_sound"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.2, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BattleFrog"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CoopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Co-op Mode"

[node name="CompetitiveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Competitive Mode"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "P1: WASD + E | P2: Arrows + /"
horizontal_alignment = 1

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sound")
volume_db = -5.0

[connection signal="pressed" from="VBoxContainer/CoopButton" to="." method="_on_coop_pressed"]
[connection signal="pressed" from="VBoxContainer/CompetitiveButton" to="." method="_on_competitive_pressed"]
